# openseespy-viewer

./: .gitignore  README.md  openseespy_example.py  pyproject.toml
.claude/: settings.local.json
examples/: samplemodel.py  samplemodel3d.py  simple_example.py
viewer/: __init__.py  __main__.py  mock.py  model.py  viewer.py  watcher.py
