[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openseespy-viewer"
version = "0.1.0"
description = "Live visual previewer for OpenSeesPy models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    { name = "James Maguire" },
]
keywords = ["opensees", "openseespy", "structural", "visualization", "pyvista"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "pyvista",
    "watchdog",
]

[project.urls]
Homepage = "https://github.com/igor-barcelos/openseespy-viewer"

[tool.setuptools.packages.find]
include = ["viewer*"]

[project.scripts]
openseespy-viewer = "viewer.__main__:main"
